# apache-beam-sample

./: .gitignore  README.md  compute_word_length_test.py  extract_word.py  filter.py  input.txt  main.py  my_options.py  pyproject.toml  sliding_time_window.py  stateful_dofn.py  test_pipeline.py  window_into.py
pipelines/: compute_word_length.py
test/: compute_word_length_test.py
